--- a/Main.Rmd
+++ b/Main.Rmd
@@ -51,35 +51,15 @@ library(RColorBrewer)
 library(scales)
 ```
 
+
 ```{r}
-df %>% group_by(OpSys) %>% summarise(price_mean = mean(Price_euros), price_sd=sd(Price_euros)) %>%  ggplot(aes(x=reorder(OpSys,-price_mean), y=price_mean)) + geom_bar(stat="identity") +   geom_errorbar(aes(ymin=price_mean-price_sd, ymax=price_mean+price_sd)) + coord_flip()
-
-```
-```{r}
-df %>% group_by(OpSys, Company) %>% summarise(n = n()) %>%  ggplot(aes(x=OpSys, y=n, color=Company, fill=Company)) + geom_bar(stat="identity", position="fill") + coord_flip()
-```
-
-
-```{r, fig.width=12, fig.height=12}
-
-library(corrplot)
-
-colnames(df)
-
-dfnum <- df[c("ScreenResolution", "Inches","Ram","Weight",
-       "Price_euros", "ProcessorRating","G3Dmark","G2Dmark", "Memory1", "Memory2",
-       "Memory1HDD", "Memory1SSD", "Memory2HDD", "Memory2SSD")]
-
-dfnum$Ram <- as.numeric(dfnum$Ram)
-
-corrplot(cor(dfnum), method = 'number')
-```
-```{r}
-
-
 df$ScaledRating <- rescale((0.5 * scale(df$ProcessorRating, center=FALSE) + 0.25 * scale(df$G2Dmark, center=FALSE) + 0.25 * scale(df$G3Dmark, center=FALSE)), to=c(1,100))
 df$PricePerformance <- ( df$Price_euros / df$ScaledRating ) 
-
+df$ScaledGPU <-  rescale( scale(df$G3Dmark, center=FALSE) +  scale(df$G2Dmark, center=FALSE), to=c(1,100))
+df$ScaledCPU <- rescale( df$ProcessorRating, to=c(1,100))
+df$RatingBin <- cut(df$ScaledRating, breaks=c(0,10,20, 30, 40, 50,60,70,80,90,100), labels=FALSE)
 ```
+
+
 
 
