--- a/Main.Rmd
+++ b/Main.Rmd
@@ -12,27 +12,25 @@ output:
     number_sections: false
 ---
 
-```{r libraries}
 
+## Topic and Scope
+In the digital era electronic devices have become indispensable. From our smartphone to our electronic washing machine, all our lives virtually depend on these little helpers. However at the core of all this transition lies the computer, which nowadays is the most important tool for getting work done. Almost no job can be executed properly without one. Long gone are the days of big, heavy stay at home computers, modern portable laptops are dominating the entire landscape. With these thoughts at hand it is time to dig a little bit deeper, into the different companies that build these marvelous devices and analyze what criteria determine their price and performance.
+
+Therefore we collected data reflecting roughly 900 different models of the recent years with their hardware configuration and manufacturer information. Since it is quite difficult to compare models utilizing different components, we extended the given information by recognized CPU and GPU benchmarks, rating each component for its performance. In order to improve readability and understanding of these metrics, which are usually in a specific scale, chosen by the benchmarking system, we scaled and converted these metrics to a range of 1 to 100, where 100 is the best possible result a hardware component can achieve. Moreover we combined the two main rating scores for CPU and GPU units to a new metric, which qualifies the overall laptop hardware performance on a range from 1 to 100 respectively.
+
+Note: To simplify the readability of this document the main pre-processing is done in a separate file, called "Data Processing.py". We have used python for this task, because on the one hand integrating both languages posed a technical challenge, which was interesting to solve, thus exploring and learning about the reticulate package. On the other hand pythons more programming oriented approach was very helpful when thinking on object-oriented terms, using functions and specific python libraries.
+
+Note: All necessary files are provided within this GitHub Repository. The used datasets were obtained from kaggle.com under the following links:
+* Laptop Prices: https://www.kaggle.com/datasets/ionaskel/laptop-prices
+* Rating of Intel and AMD processors: https://www.kaggle.com/datasets/fiftin/intel-and-amd-processors
+* GPU Benchmarks Compilation: https://www.kaggle.com/datasets/alanjo/gpu-benchmarks
+
+
+```{r libraries}
+# Libraries
 library(reticulate)
 library(tidyverse)
 library(Metrics)
-Sys.setenv(RETICULATE_PYTHON = here::here("~/.virtualenvs/VisualizationProject/Scripts/python.exe"))
-#reticulate::virtualenv_install("VisualizationProject", packages =c("pandas","numpy"))
-reticulate::use_virtualenv("VisualizationProject")
-```
-
-
-
-```{r}
-source_python("Data Processing.py")
-df <- py$df
-
-```
-
-
-```{r, warnings=FALSE}
-library(tidyverse)
 library(GGally)
 library(jtools)
 library(ggpubr)
@@ -49,8 +47,30 @@ library(ggtext)
 library(lubridate)
 library(RColorBrewer)
 library(scales)
+library(gridExtra)
+library(grid)
 ```
 
+
+```{r}
+# Resetting python to look for virtual environments in this project
+Sys.setenv(RETICULATE_PYTHON = here::here("~/.virtualenvs/VisualizationProject/Scripts/python.exe"))
+
+# Installing virtual environment with packages
+# reticulate::virtualenv_install("VisualizationProject", packages =c("pandas","numpy"))
+
+# Setting virtual environment to use for python integration
+reticulate::use_virtualenv("VisualizationProject")
+```
+
+
+
+```{r}
+# Executing python script with pre processing steps
+source_python("Data Processing.py")
+df <- py$df
+
+```
 
 ```{r}
 df$ScaledRating <- rescale((0.5 * scale(df$ProcessorRating, center=FALSE) + 0.25 * scale(df$G2Dmark, center=FALSE) + 0.25 * scale(df$G3Dmark, center=FALSE)), to=c(1,100))
@@ -58,7 +78,195 @@ df$PricePerformance <- ( df$Price_euros / df$ScaledRating )
 df$ScaledGPU <-  rescale( scale(df$G3Dmark, center=FALSE) +  scale(df$G2Dmark, center=FALSE), to=c(1,100))
 df$ScaledCPU <- rescale( df$ProcessorRating, to=c(1,100))
 df$RatingBin <- cut(df$ScaledRating, breaks=c(0,10,20, 30, 40, 50,60,70,80,90,100), labels=FALSE)
+df$Ram <- as.numeric(df$Ram)
+df$combinations = paste0(df$Cpu,'\n',df$Gpu)
+
+
 ```
+
+
+Although Pre-processing is done in python we will create the main metrics used in this analysis in r, since it is easier to use the functions provided in r for this task once the dataset is pre-processed.
+
+
+```{r}
+#Main Theme object and colors
+
+ theme <- theme_bw() + theme(plot.title = element_text(hjust = 0.5), plot.title.position = 'panel', text = element_text(size = 13, color="black"), axis.text.x = element_text(size = 13, color="black"),  axis.text.y = element_text(size = 13, color="black"),  axis.title.y = element_text(size = 14, color="black"),  axis.title.x = element_text(size = 14, color="black"), legend.title=element_text(size = 14, color="black"), legend.text=element_text(size = 13, color="black")) 
+
+colorsinv = c("green4", "green1", "yellow3","red1", "red4")
+colors = c("red4", "red1", "yellow3", "green1", "green4")
+
+```
+
+## CPU,GPU ~ Price
+
+With this information at hand we want to take a closer look, on the defined performance measures and their influence on a device. First of all we want to inspect how GPU and CPU influence laptop prices and how they influence each other:
+
+```{r, fig.width=12, fig.height=12}
+subset <- bind_rows(df %>% group_by(Product) %>%  summarise(Priced_euros=mean(Price_euros),ScaledGPU=mean(ScaledGPU), ScaledCPU=mean(ScaledCPU)) %>% arrange(-Priced_euros) %>% head(5), 
+                    df %>% group_by(Product) %>%  summarise(Priced_euros=mean(Price_euros),ScaledGPU=mean(ScaledGPU), ScaledCPU=mean(ScaledCPU)) %>% arrange(Priced_euros) %>% slice(81:85))
+
+
+df %>%  ggplot(aes(x=ScaledGPU, y=ScaledCPU)) + 
+  
+        geom_point(aes(color=Price_euros, size=Price_euros)) + 
+  
+        geom_smooth() +
+  
+        scale_color_gradientn(colors = colorsinv, n.breaks= 5) + 
+  
+        scale_size_binned(n.breaks= 5) + 
+  
+        scale_size(trans = "reverse") +
+
+        guides(color= guide_legend(), size=guide_legend()) +
+  
+        theme(plot.title = element_text(hjust = 0.5), plot.title.position = 'panel') +
+
+        geom_label_repel( data=subset, aes(label = Product), size = 5, color = alpha("black", 0.8),
+                    force = 50, seed = 20, min.segment.length = 0.1, segment.curvature = -0.4, 
+                    segment.size = 1, segment.color = "black", arrow = arrow(length = unit(0.015, "npc"),
+                    ends = "last", type = "closed"), fill = alpha("transparent", .3), max.overlaps = 10)  +  
+ 
+        labs(title = "Figure 1: Relation between GPU and CPU performance linked to the laptop price", color="Price", size="Price", x="GPU Score", y="CPU Score") +
+  
+        theme
+
+
+
+```
+
+
+Looking at the diagram above, we can see our defined metrics, ranging from 0 to 100 on the two main axis, with the price split into three categories, laptops under 1000 euros, laptops between 1000 and 2000 euros and devices above 3000 euros. GPU and CPU score clearly have a strong positive correlation, indicated by the blue regression line. From 0 to about 75 in GPU score we can observe a linear trend, with a slope higher than 1, indicating that by raising GPU power we see a stronger raise in CPU power.
+
+It is obvious that devices with a lower score at both metrics will be in a cheaper range, e.g. the Lifebook A557. At the far end of the plot, in the upper right corner we can see premium laptops, ranking high in both categories and costing a little fortune, like the DELL Alienware series for gaming. However what is most interesting to see, is that there is a trade off with regards to price when considering mainly one of the two metrics. Points in the upper left corner indicate laptops with a high CPU performance, still under 1000 euros. The same goes for devices in the lower right part of the graph, showing an increased GPU rating but moderate pricing. Comparing these two sections we can observe, that high CPU power can be achieved much cheaper than GPU power. GPU seems to be the main factor for driving the cost and after a certain threshold, upgrading GPU does not change the CPU performance, only the price will rise. Therefore our main observation is, that when considering to buy a new device, high CPU is desirable, whereas good GPU performance comes with a lot of cost. It is worth spending a couple of hundred euros more, getting a significantly better CPU, but it could be wise, to save on GPU when not necessarily needed.
+
+
+## Total Ranking Score grouped ~ Price
+
+```{r, fig.width=12, fig.height=12}
+
+data <- df %>% group_by(RatingBin) %>% summarise(price_mean = mean(Price_euros), price_sd=sd(Price_euros), n=n()) %>% filter(n > 10)
+
+data %>%  
+  ggplot(aes(x=RatingBin, y=price_mean)) + 
+  
+  geom_bar(stat="identity") +   
+  
+  geom_errorbar(aes(ymin=price_mean-price_sd, ymax=price_mean+price_sd)) + 
+  
+  geom_smooth(smoothing=FALSE) +  
+  
+  labs(title = "Figure 2: Relation between priceand Ranking Score grouped in ranges of 10", color="Price", size="Price", x="Ranking Score Group", y="Price") +
+  
+  theme
+
+```
+
+Taking this observation one step further we now look at the total ranking score of both metrics combined. We want to investigate the overall trend of the ranking score on the price, thereby cross validating the stability of our results. We divide the ranking score in bins ranging from 1-10, representing one category of similar devices when measured in performance. Looking at the second diagram, we can see, that with rising ranking score group the price of devices increases. However the displayed curve reveals, that for the first 4 ranking groups increase in price is only marginal, only after group 5 can we note a step increase in price with rising performance. This supports our initial finding: buying a cheap laptop is not always the best choice. There is a threshold up to which extra performance comes with little cost, although as shown in figure 1 this is mainly true for extra CPU performance. Moreover looking at the confidence interval of price in our calculated ranking groups, we can notice a fluctuation of roughly 300 euro which is quite similar throughout all our groups. This means, that the found trend and the recognition of a performance ~ price optimum is quite stable, since deviation does not alter much throughout the groups. Nevertheless the deviation value itself is quite large per group, which shows, that especially for lower prices very good offers exist. Note: One ranking score group is missing, which indicates that not sufficient data points exist for this category. This problem could be motivated by collecting more data or binning differently, however it might as well be, that laptops of this performance rank are very scarce. This needs further investigation.
+
+## Finding the right CPU and GPU
+
+Knowing now that there exists an optimum when buying a laptop the logical question of the intrigued buyer will be: "How do I recognize this sweet spot? Which CPU / GPU should I know buy?" To answer this question we want to investigate the most common CPUs and GPUs in laptops and see which of them display the best price-performance ratio. Therefore we introduce a new metric: price-performance ratio, this metric tells us how much one point of standardized performance (1-100) will cost us with a specific device.
+
+```{r, fig.width=12, fig.height=12}
+topn <- 10
+total <- count(df)$n
+
+dataCPU <- df %>% group_by(Cpu) %>% summarise(n=n(), meanPricePerformance = mean(PricePerformance)) %>% arrange(desc(n)) %>% 
+            group_by(Cpu = factor(c(Cpu[1:topn ], rep("Other", n() - topn)), levels=c("Other",Cpu[topn:1]))) %>% group_by(Cpu) %>%
+            summarise(n=sum(n) , meanPricePerformance = mean(meanPricePerformance), percentage=n/total * 100)  %>% arrange(desc(n))
+  
+  
+dataCPU %>%  ggplot(aes(x=Cpu, y=percentage, fill=meanPricePerformance)) + 
+  
+        geom_bar(stat="identity") + coord_flip() +  
+  
+        scale_fill_gradientn(colors = colorsinv, n.breaks= 5) + 
+  
+        geom_label(aes(label=round(percentage,2)), fill="white") +  
+  
+        labs(title = "Figure 3: Top 10 used CPUs with Price Performance Ratio", fill="Price Performance\nRatio", y="Percentage of usage in Devices", x="CPU") +
+  
+        theme
+
+```
+
+
+Turning first to CPUs, we can see in figure 3, the top 10 most used CPUs in laptops ranked by their occurence. The color indicates the price-performance ratio, with green being the least amount of euros spent for one score point of performance. It is easy to see, that the first 3 CPUs make up almost half of the entire distribution. This means that most laptops bought will have one of these 3 CPUs. Taking a closer look at the results we can observe, that when it comes to energy efficient CPUs, labeled with the index "U" i5 CPUs are always better in terms of price-performance ratio than i7 CPUs (roughly 35 euro/point for i5 7200U vs about 85 euro/point for i7 7500U). However high performance CPUs, labeled with an "HQ" suffix are the best choice in terms of price-performance ratio (25 euro/point for i7 7700 HQ). Therefore if a new laptop is considered always look out for high performance series CPU. If battery is of the essence, i5 should be chosen over i7.
+
+
+```{r, fig.width=12, fig.height=12}
+dataGPU <- df %>% group_by(Gpu) %>% summarise(n=n(), meanPricePerformance = mean(PricePerformance)) %>% arrange(desc(n)) %>%
+            group_by(Gpu = factor(c(Gpu[1:topn ], rep("Other", n() - topn)), levels=c("Other",Gpu[topn:1]))) %>% 
+            group_by(Gpu) %>% summarise(n=sum(n) , meanPricePerformance = mean(meanPricePerformance), percentage=n/total * 100)  %>% arrange(desc(n))
+  
+  
+dataGPU %>% ggplot(aes(x=Gpu, y=percentage, fill=meanPricePerformance)) +
+  
+        geom_bar(stat="identity") + coord_flip() +  
+  
+        scale_fill_gradientn(colors = colorsinv, n.breaks= 5) + 
+  
+        geom_label(aes(label=round(percentage,2)), fill="white") +  
+  
+        labs(title = "Figure 4: Top 10 used GPUs with Price Performance Ratio", fill="Price Performance\nRatio", y="Percentage of usage in Devices", x="GPU") +
+  
+        theme
+```
+
+
+Turning now to GPU analysis, we can see the same kind of plot depicted for GPUs, with the color again indicating the price-performance ratio of a graphics card. It is interesting to note, that here once again the first couple of GPUs make up a large share of the overall cards available, the first 4 having roughly 60 % market share. However, the distribution is different, since Intel HD 620 GPUs take up more than 30 % by their own. Considering the price-performance ratio we can observe, that roughly 45 % of GPUs installed (being Intel HD 620 or Intel 520) are quite undesirable. The difference in naming for intels onboard GPUs is quite significant, since GPUS with the prefix "U" perform fairly well with Intel UHD 620 at roughly 25 euro/point, especially compared to their dominant sibling Intel HD 620 at about 90 euro/point. Moreover we can observe, that external GPUs like the Nvidia GeForce GTX series are much better in terms of price-performance ratio than their onboard intel competitors. Therefore when looking out for new Hardware two main things should be memorized when it comes to GPUs: Either look for external GPUs or examine closely which kind of GPU is installed on your device, it seems like manifacturers earn a great deal by selling two different types of onboard GPU with very similar naming.
+
+Using our results from these two analysis we can safely pose the question: Which is the Hardware combination which occurs most frequent in laptops sold and which of these combinationsa re now desirable, based on our knowledge?
+
+
+
+```{r, fig.width=12, fig.height=12}
+subset <- df %>% group_by(combinations) %>% summarise(n=n(), meanPricePerformance = mean(PricePerformance)) %>% arrange(desc(n)) %>% 
+                 group_by(combinations = factor(c(combinations[1:topn ], rep("Other", n() - topn)), levels=c("Other",combinations[topn:1]))) %>% 
+                 group_by(combinations) %>% summarise(n=sum(n) , meanPricePerformance = mean(meanPricePerformance), percentage=n/total * 100)  %>% arrange(desc(n)) %>% top_n(5)
+
+
+
+data <- df %>% group_by(combinations) %>% summarise(n=n(), meanPricePerformance = mean(PricePerformance)) %>% arrange(desc(n)) %>% 
+        group_by(combinations = factor(c(combinations[1:topn ], rep("Other", n() - topn)), levels=c("Other",combinations[topn:1]))) %>% 
+        group_by(combinations) %>% summarise(n=sum(n) , meanPricePerformance = mean(meanPricePerformance), percentage=n/total * 100)  %>% arrange(desc(n)) 
+
+data %>% ggplot(aes(x=combinations, y=percentage, fill=meanPricePerformance)) + 
+  
+         geom_bar(stat="identity") + coord_flip() +  scale_fill_gradientn(colors = colorsinv, n.breaks= 5) +
+  
+         geom_label(aes(label=round(percentage,2)), fill="white") +   
+  
+         labs(title = "Figure 5: Top 10 used Hardware Specs with Price Performance Ratio", fill="Price Performance\nRatio", y="Percentage of usage in Devices", x="Hardware") +
+  
+         theme
+
+
+
+
+```
+
+
+Taking
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
